--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<html>
+<!DOCTYPE html>
 
- <table>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <table>
 
   <tr>
  
@@ -69,5 +74,6 @@
   </tr>
 
  </table>
+ </body>
 
 </html>
